add icons and more styles

--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -16,8 +16,29 @@
   background-color: var(--gray-500);
   border: 2px solid var(--blue);
   border-radius: 999px;
+  cursor: pointer;
+  transition: 150ms;
+}
+
+.todo label:hover {
+  border: 2px solid var(--blue-dark);
 }
 
 .todo input[type="radio"] {
   display: none;
+}
+
+.todo button {
+  background-color: transparent;
+  border: 0;
+  border-radius: 0.25rem;
+  color: var(--white);
+  padding: 0.3125rem 0.375rem;
+  cursor: pointer;
+  transition: 150ms;
+}
+
+.todo button:hover {
+  background-color: var(--gray-400);
+  color: var(--danger);
 }
