--- a/src/App.module.css
+++ b/src/App.module.css
@@ -32,6 +32,10 @@
   font-weight: bold;
   transition: background-color 0.2s;
   cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
 }
 
 .createTask button:hover {
