--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,7 +13,7 @@
 
 .createTask input {
   background-color: var(--gray-500);
-  color: var(--gray-300);
+  color: var(--white);
 
   border: 1px solid var(--gray-700);
   border-radius: 8px;
