--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -1,5 +1,6 @@
 .todo {
   display: flex;
+  align-items: center;
   gap: 0.75rem;
   padding: 1rem;
 
@@ -8,6 +9,8 @@
 
   border: 1px solid var(--gray-400);
   border-radius: 0.5rem;
+
+  cursor: pointer;
 }
 
 .todo label {
@@ -26,6 +29,10 @@
 
 .todo input[type="radio"] {
   display: none;
+}
+
+.todo input[type="radio"]:checked + label {
+  background-color: var(--blue) !important;
 }
 
 .todo button {
