--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -36,3 +36,18 @@
   flex-direction: column;
   gap: 0.75rem;
 }
+
+.statusMenssage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+  font-size: 1rem;
+  line-height: 140%;
+  margin: 4rem 1.5rem;
+}
+
+.statusMenssage > div strong {
+  display: block;
+}
